<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_marginTop="5dp"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_tiendas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="10dp"
        android:paddingBottom="30dp"
        card_view:cardCornerRadius="20dp"
        card_view:cardElevation="4dp"
        card_view:cardUseCompatPadding="true">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="276dp"
            android:clipToPadding="true"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgtienda"
                android:layout_width="150dp"
                android:layout_height="186dp"
                android:foregroundGravity="center"
                tools:srcCompat="@tools:sample/avatars" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:gravity="center_horizontal|center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtNombreTienda"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_nombre"
                    android:textAlignment="center"
                    android:textColor="@color/ic_coffee_background"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtDescriptionStore"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_ubicacion"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/txtUbicacionTienda"
                    android:layout_width="match_parent"
                    android:layout_height="43dp"
                    android:text="@string/txt_horario"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textSize="17dp" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>